force-app/main/default/objects/Account/fields/Enterprise_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Assignment__c</fullName>
    <description>Assignment for Enterprise Lists.</description>
    <label>Enterprise Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abbey Wilson</fullName>
            </value>
            <value>
                <fullName>Aldon Ortego</fullName>
            </value>
            <value>
                <fullName>Alexander Lethen</fullName>
            </value>
            <value>
                <fullName>Alexander Sharp</fullName>
            </value>
            <value>
                <fullName>Alex Fisher</fullName>
            </value>
            <value>
                <fullName>Alex Kauth</fullName>
            </value>
            <value>
                <fullName>Alex McCall</fullName>
            </value>
            <value>
                <fullName>Alyssa Unterreiner</fullName>
            </value>
            <value>
                <fullName>Amanda Reid</fullName>
            </value>
            <value>
                <fullName>Amber Roork</fullName>
            </value>
            <value>
                <fullName>Amir Bhagwandin</fullName>
            </value>
            <value>
                <fullName>Andrew Kendall</fullName>
                <isActive>false</isActive>
                <label>Andrew Kendall</label>
            </value>
            <value>
                <fullName>Andrew Kimbrough</fullName>
            </value>
            <value>
                <fullName>Andrew Meese</fullName>
            </value>
            <value>
                <fullName>Andrew Tate</fullName>
            </value>
            <value>
                <fullName>Ann Garber</fullName>
            </value>
            <value>
                <fullName>Ashley Cookas</fullName>
                <isActive>false</isActive>
                <label>Ashley Cookas</label>
            </value>
            <value>
                <fullName>Austin Smith</fullName>
            </value>
            <value>
                <fullName>Bart Pickett</fullName>
            </value>
            <value>
                <fullName>Becky Devin</fullName>
            </value>
            <value>
                <fullName>Bency Beals</fullName>
            </value>
            <value>
                <fullName>BENELUX TBH 2</fullName>
                <isActive>false</isActive>
                <label>BENELUX TBH 2</label>
            </value>
            <value>
                <fullName>Bobby Boyle</fullName>
            </value>
            <value>
                <fullName>Brett Gascoine</fullName>
            </value>
            <value>
                <fullName>Brian Glowiak</fullName>
            </value>
            <value>
                <fullName>Brian Hanlon</fullName>
            </value>
            <value>
                <fullName>Canada 1</fullName>
            </value>
            <value>
                <fullName>Canada 2</fullName>
            </value>
            <value>
                <fullName>Canada 3</fullName>
            </value>
            <value>
                <fullName>Canada East TBH</fullName>
                <isActive>false</isActive>
                <label>Canada East TBH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>