force-app/main/default/objects/Account/fields/Enterprise_Experiments__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Experiments__c</fullName>
    <description>Field to tag accounts when running enterprise call list and other experiments</description>
    <label>Enterprise Experiments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>