force-app/main/default/objects/Account/fields/Event_Lead__c.field-meta.xml
<CustomField>
    <fullName>Event_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This lead has been uploaded to Salesforce by using the Events Uploader tool. The lead has special restrictions for this reason (eg. Time that must pass before it can be unloaded by a rep)</description>
    <label>Event Lead</label>
    <type>Checkbox</type>
</CustomField>