force-app/main/default/objects/Account/fields/Exclude_HWM__c.field-meta.xml
<CustomField>
    <fullName>Exclude_HWM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For rattlesnake project. Exclude from High Water Mark calculation</description>
    <label>Exclude_HWM</label>
    <type>Checkbox</type>
</CustomField>