force-app/main/default/objects/Account/fields/Excluded_From_C360__c.field-meta.xml
<CustomField>
    <fullName>Excluded_From_C360__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-26935 Rebuilding C360 Records. Created as part of recreation of Customer 360 data.</description>
    <inlineHelpText>If this checkbox is checked, the account will be skipped from creating Customer 360 Staging records.</inlineHelpText>
    <label>C360 Processed</label>
    <type>Checkbox</type>
</CustomField>