force-app/main/default/objects/Account/fields/Exempt_from_Processing_Fees__c.field-meta.xml
<CustomField>
    <fullName>Exempt_from_Processing_Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exempt from Processing Fees</label>
    <type>Checkbox</type>
</CustomField>