force-app/main/default/objects/Account/fields/Experimental_Group__c.field-meta.xml
<CustomField>
    <fullName>Experimental_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experimental Group</label>
    <type>Checkbox</type>
</CustomField>