force-app/main/default/objects/Account/fields/Experimental_Group_Routing__c.field-meta.xml
<CustomField>
    <fullName>Experimental_Group_Routing__c</fullName>
    <label>Experimental Group Routing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>