force-app/main/default/objects/Account/fields/Feature_commits_CSM__c.field-meta.xml
<CustomField>
    <fullName>Feature_commits_CSM__c</fullName>
    <description>A place to note what feature commits have been made to the prospect</description>
    <inlineHelpText>A place to note what feature commits have been made to the prospect. A feature that we’re committed to delivering for this customer in the future, as it’s a critical part of their business.</inlineHelpText>
    <label>CS Feature Commits</label>
    <type>TextArea</type>
</CustomField>