force-app/main/default/objects/Account/fields/Finance_Partner__c.field-meta.xml
<CustomField>
    <fullName>Finance_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Finance Partner)</relationshipLabel>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>