force-app/main/default/objects/Account/fields/First_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Demo_Date__c</fullName>
    <label>First Demo Date</label>
    <type>Date</type>
</CustomField>