force-app/main/default/objects/Account/fields/First_Opportunity_Lead_Source_Encoded__c.field-meta.xml
<CustomField>
    <fullName>First_Opportunity_Lead_Source_Encoded__c</fullName>
    <description>Gets the minimum lead source encoded and stores it to set the initial source of the account</description>
    <label>First Opportunity Lead Source Encoded</label>
    <summarizedField>Opportunity.Lead_Source_Encoded__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Revenue Opportunity</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>