force-app/main/default/objects/Account/fields/First_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Purchase_Date__c</fullName>
    <label>First Purchase Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Revenue Opportunity, Revenue Opportunity - Bill Only</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Amount</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>