force-app/main/default/objects/Account/fields/First_Purchase_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>First_Purchase_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>First Purchase Opportunity Look-up</description>
    <label>First Purchase Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts (First Purchase Opportunity)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>