force-app/main/default/objects/Account/fields/First_Purchase_Value__c.field-meta.xml
<CustomField>
    <fullName>First_Purchase_Value__c</fullName>
    <label>First Purchase Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>