force-app/main/default/objects/Account/fields/First_Revenue_Oppty_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Revenue_Oppty_Creation_Date__c</fullName>
    <label>First Revenue Oppty Creation Date</label>
    <summarizedField>Opportunity.CreatedDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Revenue Opportunity, Revenue Opportunity - Bill Only</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>