force-app/main/default/objects/Account/fields/Fleet_Seek_Number__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Seek_Number__c</fullName>
    <description>Unique identifier for the fleet seek database. Useful for retroactive updates.</description>
    <label>Origination Source(Custom Enriched Data)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>