force-app/main/default/objects/Account/fields/Flywheel_Certified_Date__c.field-meta.xml
<CustomField>
    <fullName>Flywheel_Certified_Date__c</fullName>
    <description>Date Partner Account became Flywheel Certified. Specific to Industrial Partner Account records</description>
    <label>Flywheel Certified (Date)</label>
    <type>Date</type>
</CustomField>