force-app/main/default/objects/Account/fields/Follow_Up_Notes__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Notes__c</fullName>
    <inlineHelpText>Specific information given by prospect regarding desires for future follow up</inlineHelpText>
    <label>Contract Notes</label>
    <type>TextArea</type>
</CustomField>