force-app/main/default/objects/Account/fields/Free_Trial_First_Account_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Free_Trial_First_Account_Creation_Date__c</fullName>
    <description>Stores the creation date time of the first person that started using any free trial of that account</description>
    <label>Free Trial First Account Creation Date</label>
    <type>DateTime</type>
</CustomField>