force-app/main/default/objects/Account/fields/Free_Trial_Kit_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Free_Trial_Kit_Sent_Date__c</fullName>
    <description>Date in which the Free Trial Kit was sent to the customer.</description>
    <label>Free Trial Kit Sent Date</label>
    <type>Date</type>
</CustomField>