force-app/main/default/objects/Account/fields/Further_information_required__c.field-meta.xml
<CustomField>
    <fullName>Further_information_required__c</fullName>
    <description>This is a notes field for Finance to communicate to the rep what information they need from the customer to evaluate their credit further.</description>
    <label>Finance Notes</label>
    <type>TextArea</type>
</CustomField>