force-app/main/default/objects/Account/fields/Geographic_Region__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Region__c</fullName>
    <label>Geographic Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>