force-app/main/default/objects/Account/fields/Global_Geography__c.field-meta.xml
<CustomField>
    <fullName>Global_Geography__c</fullName>
    <description>Geography field that includes Canada provinces and U.K.</description>
    <label>Global Geography</label>
    <length>50</length>
    <type>Text</type>
</CustomField>