force-app/main/default/objects/Account/fields/Golden_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Golden_Ticket__c</fullName>
    <inlineHelpText>For US AE2’s to mark Golden Ticket accounts per FY23 Account Policy</inlineHelpText>
    <label>Golden Ticket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FY27 Lock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>