force-app/main/default/objects/Account/fields/Hashtag__c.field-meta.xml
<CustomField>
    <fullName>Hashtag__c</fullName>
    <description>Tag the account with the concept you prefer. Useful for mass transfering, as the actual tool does not allow the description field to be used for that.</description>
    <label>Account Hashtag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>