force-app/main/default/objects/Account/fields/Highest_Probability_Open_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Highest_Probability_Open_Opportunity__c</fullName>
    <description>Rolled up by DLRS</description>
    <label>Highest Probability Open Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>