force-app/main/default/objects/Account/fields/HUB_Account__c.field-meta.xml
<CustomField>
    <fullName>HUB_Account__c</fullName>
    <formula>AND(
  Account_Status_Updated__c = &quot;Existing Customer&quot;,
  NOT(CONTAINS(Owner_Role__c, &quot;Fleet Insurance Partner&quot;)),
  OR(
    AND(
      Customer_ARR__c &gt;= 1000000,
      ISPICKVAL(BillingCountryCode, &quot;US&quot;),
      NOT(CONTAINS(Owner_Role__c, &quot;SLED&quot;))
    ),
    AND(
      Customer_ARR__c &gt;= 650000,
      OR(
        NOT(ISPICKVAL(BillingCountryCode, &quot;US&quot;)), 
        CONTAINS(Owner_Role__c, &quot;SLED&quot;)
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HUB Account</label>
    <type>Checkbox</type>
</CustomField>