force-app/main/default/objects/Account/fields/IF_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>IF_Response_Date__c</fullName>
    <description>to store recently approved Internal Finance request approval response date</description>
    <label>IF Response Date</label>
    <type>Date</type>
</CustomField>