force-app/main/default/objects/Account/fields/IF_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>IF_Submitter_Email__c</fullName>
    <description>to store the recently approved Internal Finance Request submitter email</description>
    <label>IF Submitter Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>