force-app/main/default/objects/Account/fields/IFL_Deals__c.field-meta.xml
<CustomField>
    <fullName>IFL_Deals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Flight Legacy Deals</label>
    <type>Checkbox</type>
</CustomField>