force-app/main/default/objects/Account/fields/In_Flight_Deal__c.field-meta.xml
<CustomField>
    <fullName>In_Flight_Deal__c</fullName>
    <label>In Flight Deal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>FY25 P&amp;P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>