force-app/main/default/objects/Account/fields/Initiate_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Initiate_Round_Robin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-11254</description>
    <label>Initiate Round Robin</label>
    <type>Checkbox</type>
</CustomField>