force-app/main/default/objects/Account/fields/Inside_Sales_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Assignment__c</fullName>
    <description>Assignment of Named Accounts for AEs</description>
    <label>Inside Sales Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Adam Regos</fullName>
            </value>
            <value>
                <fullName>Alexander Gnädig</fullName>
            </value>
            <value>
                <fullName>Alex Fisher</fullName>
            </value>
            <value>
                <fullName>Alex Kane</fullName>
            </value>
            <value>
                <fullName>Angel Ashcraft</fullName>
            </value>
            <value>
                <fullName>Anton Cardenas</fullName>
            </value>
            <value>
                <fullName>Ben Osman</fullName>
            </value>
            <value>
                <fullName>Brendon Lanouette</fullName>
            </value>
            <value>
                <fullName>Brett Kirkendall</fullName>
            </value>
            <value>
                <fullName>Brian Broe</fullName>
            </value>
            <value>
                <fullName>Chase Turay</fullName>
            </value>
            <value>
                <fullName>Chris Fisher</fullName>
            </value>
            <value>
                <fullName>Chris Killeen</fullName>
            </value>
            <value>
                <fullName>Chris McMurtagh</fullName>
            </value>
            <value>
                <fullName>Ciaran O Neill</fullName>
            </value>
            <value>
                <fullName>Cindy Townsend</fullName>
            </value>
            <value>
                <fullName>Curtis Holcombe</fullName>
            </value>
            <value>
                <fullName>DACH TBH 1</fullName>
            </value>
            <value>
                <fullName>Dante Selvitella</fullName>
            </value>
            <value>
                <fullName>Devin Hamner</fullName>
            </value>
            <value>
                <fullName>Evan Richards</fullName>
            </value>
            <value>
                <fullName>Forest Chapman</fullName>
            </value>
            <value>
                <fullName>France TBH 1</fullName>
            </value>
            <value>
                <fullName>Greg Muender</fullName>
            </value>
            <value>
                <fullName>Harry Lal</fullName>
            </value>
            <value>
                <fullName>IS Pool</fullName>
            </value>
            <value>
                <fullName>Jacqueline Gregory</fullName>
            </value>
            <value>
                <fullName>Jason Alumbaugh</fullName>
            </value>
            <value>
                <fullName>Jay Chokshi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>