force-app/main/default/objects/Account/fields/Internally_Financed__c.field-meta.xml
<CustomField>
    <fullName>Internally_Financed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internally Financed?</label>
    <type>Checkbox</type>
</CustomField>