force-app/main/default/objects/Account/fields/Is_Deal_Reg_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Deal_Reg_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-5294</description>
    <label>Is Deal Reg Account</label>
    <type>Checkbox</type>
</CustomField>