force-app/main/default/objects/Account/fields/Is_Finance_Partner_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Finance_Partner_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-16585 Indicates if the Partner Account is in an active partnership with Samsara.</description>
    <inlineHelpText>Indicates if the Partner Account is in an active partnership with Samsara.</inlineHelpText>
    <label>Is Finance Partner Active</label>
    <type>Checkbox</type>
</CustomField>