force-app/main/default/objects/Account/fields/Is_Owner_Pool_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_Pool_User__c</fullName>
    <description>change LFBN__Is_Pool_User__c from to RR_Is_Pool_User__c for GTMS-13168</description>
    <formula>Owner.RR_Is_Pool_User__c</formula>
    <label>Is Owner Pool User</label>
    <type>Checkbox</type>
</CustomField>