force-app/main/default/objects/Account/fields/Is_Website_Visitor_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Website_Visitor_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies whether a lead should be credited to Snitcher/Kickfire.</description>
    <label>Is Website Visitor Lead</label>
    <type>Checkbox</type>
</CustomField>