force-app/main/default/objects/Account/fields/IsStateRamp_Flag__c.field-meta.xml
<CustomField>
    <fullName>IsStateRamp_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsStateRamp Flag</label>
    <type>Checkbox</type>
</CustomField>