force-app/main/default/objects/Account/fields/Justification_for_the_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_the_Relationship__c</fullName>
    <label>Justification for the Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>