force-app/main/default/objects/Account/fields/Key_Stakeholder_for_CSM__c.field-meta.xml
<CustomField>
    <fullName>Key_Stakeholder_for_CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is for AEs to connect the key contact that CSMs should contact to initiate onboarding</description>
    <inlineHelpText>Link the key contact for CSMs to contact to initiate onboarding</inlineHelpText>
    <label>Key Stakeholder for CS</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Key Stakeholder for CSM)</relationshipLabel>
    <relationshipName>Accounts_for_CSM</relationshipName>
    <type>Lookup</type>
</CustomField>