force-app/main/default/objects/Account/fields/Key_Value_Points__c.field-meta.xml
<CustomField>
    <fullName>Key_Value_Points__c</fullName>
    <inlineHelpText>Very important to list what they purchased Samsara for so we can cater trainings to these different areas for them (Can select more than 1)</inlineHelpText>
    <label>Key Value Points</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dispatch and Routing</fullName>
            </value>
            <value>
                <fullName>Driver Productivity</fullName>
                <label>Driver Workflows</label>
            </value>
            <value>
                <fullName>Maintenance - Preventative and Event Response</fullName>
                <label>Maintenance</label>
            </value>
            <value>
                <fullName>Fuel Management</fullName>
            </value>
            <value>
                <fullName>Core API Integrations</fullName>
                <label>API and Integrations</label>
            </value>
            <value>
                <fullName>Utilization (trucks/trailers/heavy equipment) [VG/AG]</fullName>
                <label>Utilization</label>
            </value>
            <value>
                <fullName>Cold Chain Management [AG/EM]</fullName>
                <label>Cold Chain Management</label>
            </value>
            <value>
                <fullName>Safety Event Response</fullName>
                <label>Safety</label>
            </value>
            <value>
                <fullName>Coaching - High Risk Driver Behavior Response</fullName>
                <label>Safety Coaching</label>
            </value>
            <value>
                <fullName>ELD/Tachograph</fullName>
                <label>Compliance</label>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Telematics</fullName>
            </value>
            <value>
                <fullName>Electrification</fullName>
            </value>
            <value>
                <fullName>API/integrations</fullName>
                <isActive>false</isActive>
                <label>API/integrations</label>
            </value>
            <value>
                <fullName>Asset tracking</fullName>
                <isActive>false</isActive>
                <label>Asset tracking</label>
            </value>
            <value>
                <fullName>Camera only</fullName>
                <isActive>false</isActive>
                <label>Camera only</label>
            </value>
            <value>
                <fullName>DVIRs</fullName>
                <isActive>false</isActive>
                <label>DVIRs</label>
            </value>
            <value>
                <fullName>Dispatch</fullName>
                <isActive>false</isActive>
                <label>Dispatch</label>
            </value>
            <value>
                <fullName>ELD</fullName>
                <isActive>false</isActive>
                <label>ELD</label>
            </value>
            <value>
                <fullName>EM/sensors</fullName>
                <isActive>false</isActive>
                <label>EM/sensors</label>
            </value>
            <value>
                <fullName>GPS</fullName>
                <isActive>false</isActive>
                <label>GPS</label>
            </value>
            <value>
                <fullName>IFTA Reporting</fullName>
                <isActive>false</isActive>
                <label>IFTA Reporting</label>
            </value>
            <value>
                <fullName>Maintenance</fullName>
                <isActive>false</isActive>
                <label>Maintenance</label>
            </value>
            <value>
                <fullName>Mobile Device Management</fullName>
                <isActive>false</isActive>
                <label>Mobile Device Management</label>
            </value>
            <value>
                <fullName>Other (?)</fullName>
                <isActive>false</isActive>
                <label>Other (?)</label>
            </value>
            <value>
                <fullName>Routing</fullName>
                <isActive>false</isActive>
                <label>Routing</label>
            </value>
            <value>
                <fullName>Safety</fullName>
                <isActive>false</isActive>
                <label>Safety</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>