force-app/main/default/objects/Account/fields/Last_Call__c.field-meta.xml
<CustomField>
    <fullName>Last_Call__c</fullName>
    <description>Rollup of the last call datetime for any of the contacts of the account.</description>
    <label>Last Call</label>
    <type>DateTime</type>
</CustomField>