force-app/main/default/objects/Account/fields/Last_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Last_Contacted__c</fullName>
    <label>Last Contacted</label>
    <type>DateTime</type>
</CustomField>