force-app/main/default/objects/Account/fields/Last_Marketing_Engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Marketing_Engagement_Date__c</fullName>
    <label>Last Inbound Interest Date</label>
    <type>DateTime</type>
</CustomField>