force-app/main/default/objects/Account/fields/Last_Meaningful_Engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Meaningful_Engagement_Date__c</fullName>
    <label>Last Meaningful Engagement Date</label>
    <type>Date</type>
</CustomField>