force-app/main/default/objects/Account/fields/Last_Upsell_Referall_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Last_Upsell_Referall_Conversation__c</fullName>
    <description>Rep stamps date/time of last upsell/referall conversation (Kiriti + Roel)</description>
    <inlineHelpText>Rep to stamp date/time of last upsell or referral conversation. Only use if conversation was had either with positive or negative result.</inlineHelpText>
    <label>Last Upsell Conversation</label>
    <type>DateTime</type>
</CustomField>