force-app/main/default/objects/Account/fields/Latest_Active_Contract__c.field-meta.xml
<CustomField>
    <fullName>Latest_Active_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Active Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>