force-app/main/default/objects/Account/fields/Latest_Active_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Active_Contract_End_Date__c</fullName>
    <formula>Latest_Active_Contract__r.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Active Contract End Date</label>
    <type>Date</type>
</CustomField>